# youtu-parsing

./: LICENSE  README.md
youtu_client_parser/: __init__.py  youtu_ocr_parser_client.py
youtu_hf_parser/: MANIFEST.in  __init__.py  pyproject.toml  requirements.txt  setup.py  youtu_ocr_parser_hf.py
youtu_hf_parser/preprocessing/: __init__.py  angle_corrector.py
youtu_hf_parser/preprocessing/angle_predictor/: __init__.py  angle_predictor.py
youtu_hf_parser/preprocessing/angle_predictor/model_structure/: backbone.py  common.py  head.py  model.py  neck.py
youtu_parsing_utils/: MANIFEST.in  __init__.py  consts.py  figtext_utils.py  image_utils.py  layout_utils.py  parser_utils.py  prompt.py  pyproject.toml  requirements.txt  setup.py  table_utils.py  visualize_utils.py
