[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtu-hf-parser"
version = "0.1.0"
description = "HuggingFace-based OCR parser with direct model inference and angle correction"
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "transformers==4.51.3",
    "PyMuPDF==1.26.5",
    "numpy==2.0.2",
    "accelerate==1.12.0",
    "opencv-python-headless==4.12.0.88",
    "numba==0.60.0",
    "Pillow>=8.0.0",
    "tqdm",
    "youtu-parsing-utils @ git+https://github.com/TencentCloudADP/youtu-parsing.git#subdirectory=youtu_parsing_utils",
]

[project.urls]
Homepage = "https://github.com/TencentCloudADP/youtu-parsing"
Repository = "https://github.com/TencentCloudADP/youtu-parsing.git"

[tool.setuptools]
packages = [
    "youtu_hf_parser",
    "youtu_hf_parser.preprocessing",
    "youtu_hf_parser.preprocessing.angle_predictor",
    "youtu_hf_parser.preprocessing.angle_predictor.model_structure",
]

[tool.setuptools.package-dir]
"youtu_hf_parser" = "."
"youtu_hf_parser.preprocessing" = "preprocessing"
"youtu_hf_parser.preprocessing.angle_predictor" = "preprocessing/angle_predictor"
"youtu_hf_parser.preprocessing.angle_predictor.model_structure" = "preprocessing/angle_predictor/model_structure"

[tool.setuptools.package-data]
"youtu_hf_parser" = ["*.py", "*.txt", "*.md"]
"youtu_hf_parser.preprocessing" = ["*.py", "model_weight/*.pth", "model_weight/*.yaml"]