[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtu-parsing-utils"
version = "0.1.0"
description = "Utility functions for Youtu OCR Parser - document parsing and layout analysis"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Pillow>=8.0.0",
    "PyMuPDF>=1.20.0",
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/TencentCloudADP/youtu-parsing"
Repository = "https://github.com/TencentCloudADP/youtu-parsing.git"